# LiDAR-Subsampling-Benchmark

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
PTv3/: QUICKSTART.md  activate.sh  compare_venvs.sh  debug_venv_diff.sh  pyproject.toml  setup_venv.sh  test_flash_attn.sh
PTv3/DALES/: README.md  dales_dataset.py
PTv3/DALES/configs/_base_/: default_runtime.py
PTv3/DALES/configs/dales/: ptv3_140gb_official_template.py  ptv3_40gb_official_template.py  ptv3_dales_outdoor_template.py
PTv3/DALES/docs/: CONFIG_UPDATE_OUTDOOR_PATTERN.md  DALES_DATA_STRUCTURE_UPDATE.md  DALES_LOADER_VERIFICATION.md  PTv3m1_VERIFICATION.md
PTv3/DALES/scripts/: generate_configs.py  train_experiments.py
PTv3/SemanticKITTI/: README.md
PTv3/SemanticKITTI/configs/_base_/: default_runtime.py
PTv3/SemanticKITTI/configs/semantickitti/: ptv3_140gb_official_template.py  ptv3_40gb_official_template.py  ptv3_semantickitti_official_template.py
PTv3/SemanticKITTI/configs/semantickitti/_base_/: default_runtime.py
PTv3/SemanticKITTI/scripts/: generate_configs.py  generate_training_curves.py  inference_on_original_140gb.sh  inference_semantickitti_140gb.sh  profile_during_training.py  profile_model.py  quick_profile.py  test_semantickitti.sh  train_experiments.py  train_semantickitti_140gb.sh  train_semantickitti_40gb.sh
RandLANet/: README.md
configs/depoco/: README.md  final_skitti_72.5.yaml  final_skitti_82.5.yaml  final_skitti_87.5.yaml  final_skitti_92.5.yaml  final_skitti_97.5.yaml  generate_subsampled.sh  preprocess_semantickitti.sh  train_depoco.sh
data/: README.md
scripts/: README.md  RUN_TESTS.sh  analyze_classwise_distribution.py  benchmark_subsampling_efficiency.sh  extract_inference_metrics.py  extract_training_metrics.py  generate_classwise_distribution.sh  preprocess_semantickitti_for_depoco.sh  run_subsampling_phase1_dales_kitti.sh  run_subsampling_phase2_dales.sh  run_subsampling_phase2_semantickitti.sh  run_subsampling_phase3_semantickitti.sh  train_depoco_loss50_loss90.sh
scripts/analysis/: pca_curvature_analysis.py  statistical_significance_test.py
scripts/figures/: find_good_scans.py  generate_all.sh  generate_classwise_figures.py  generate_classwise_performance_drop.py  generate_figures.py  generate_pointcloud_comparison.py  generate_pointcloud_comparison_o3d.py  good_scans.txt
scripts/preprocessing/: README.md  convert_ply_to_txt.py  generate_idis_r_ablation.py  generate_subsampled_dales.py  generate_subsampled_dales_gpu.py  generate_subsampled_depoco.py  generate_subsampled_gpu.py  generate_subsampled_semantickitti.py  generate_subsampled_semantickitti_v2.py  preprocess_semantickitti_for_depoco.py  restructure_subsampled_semantickitti.py  subsample_data.py  verify_subsampling.py
src/: __init__.py
src/datasets/: __init__.py
src/models/: __init__.py
src/subsampling/: __init__.py  dbscan.py  depoco.py  fps.py  fps_gpu.py  idis.py  idis_gpu.py  poisson_disk.py  random_sampling.py  voxel_grid.py
src/utils/: __init__.py  metrics.py
