[project]
name = "lidar-subsampling-benchmark"
version = "0.1.0"
description = "LiDAR Subsampling Benchmark - Evaluating point cloud subsampling methods with PTv3 on SemanticKITTI and DALES"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Pyare Lal Chauhan", email = "pyare22@iiserb.ac.in" }
]

dependencies = [
    # Core ML frameworks (pinned for reproducibility)
    # NOTE: For CUDA 11.8, install with:
    #   uv pip install torch==2.5.0+cu118 torchvision==0.20.0+cu118 --index-url https://download.pytorch.org/whl/cu118
    # For CUDA 12.x, use default PyPI versions
    "torch>=2.0.0,<2.10",
    "torchvision>=0.15.0,<1.0",

    # Point cloud processing
    "numpy>=1.23.0,<3.0",
    "scipy>=1.10.0",
    "h5py>=3.8.0",  # For HDF5 dataset loading

    # Data handling
    "plyfile>=0.9.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",

    # Utilities
    "matplotlib>=3.7.0",
    "scikit-learn>=1.2.0",  # For normal computation if needed

    # Pointcept core dependencies
    "termcolor>=2.0.0",  # For colored logging
]

[project.optional-dependencies]
# For PTv3 training (install Pointcept separately)
training = [
    "einops>=0.6.0",
    "timm>=0.9.0",
    "addict>=2.4.0",
    "yacs>=0.1.8",
    "tensorboard>=2.12.0",
    "tensorboardx>=2.6.0",  # Additional tensorboard features
    "opencv-python>=4.7.0",
    "pillow>=9.5.0",
    "yapf>=0.40.0",  # Code formatting (used by Pointcept)
    "ftfy>=6.0.0",  # Text encoding fixes
    "regex>=2023.0.0",  # Regular expressions
]

# CUDA extensions for point cloud operations
# NOTE: Requires CUDA toolkit installed and matching PyTorch CUDA version
cuda = [
    "spconv-cu118>=2.3.0",  # For CUDA 11.8 (adjust cu118/cu124 based on your CUDA)
    "ninja>=1.11.0",  # For compiling CUDA extensions
]

# Flash attention for faster training (optional, requires compatible GPU)
flash = [
    "flash-attn>=2.0.0",
]

# Weights & Biases for experiment tracking
wandb = [
    "wandb>=0.15.0",
]

# Development tools
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]

# Visualization tools
visualization = [
    "open3d>=0.17.0",
    "mayavi>=4.8.0",
    "pyvista>=0.40.0",
    "seaborn>=0.12.0",
]

# For working with LAS/LAZ files (if needed)
lidar = [
    "laspy>=2.4.0",
    "lazrs>=0.6.0",
]

# Everything together
all = [
    "lidar-subsampling-benchmark[training,cuda,wandb,dev,visualization,lidar]",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts", "tools"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | pointcept
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
extend_skip = ["pointcept"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=scripts --cov=tools --cov-report=html --cov-report=term"

# UV-specific configurations
[tool.uv]
dev-dependencies = [
    "pytest>=7.3.0",
    "black>=23.3.0",
    "isort>=5.12.0",
]

[tool.uv.sources]
# If you need to install from git directly
# pointcept = { git = "https://github.com/Pointcept/Pointcept.git" }

# ==============================================================================
# INSTALLATION NOTES FOR REPRODUCIBILITY
# ==============================================================================
#
# This project requires Pointcept framework and its CUDA extensions.
#
# SETUP STEPS:
#
# 1. Create virtual environment:
#    uv venv .venv --python 3.11
#    source .venv/bin/activate  # or: source ../setup_env.sh
#
# 2. Install base dependencies:
#    uv pip install -e ".[training,cuda,wandb]"
#
# 3. Install PyTorch for your CUDA version:
#    # For CUDA 11.8:
#    uv pip uninstall torch torchvision
#    uv pip install torch==2.5.0+cu118 torchvision==0.20.0+cu118 \
#        --index-url https://download.pytorch.org/whl/cu118
#
#    # For CUDA 12.4+ (default):
#    # PyTorch from step 2 should work directly
#
# 4. Set PYTHONPATH for Pointcept:
#    export PYTHONPATH="/path/to/PTv3/pointcept:$PYTHONPATH"
#
# 5. Compile Pointcept CUDA extensions:
#    cd ../pointcept/libs/pointops
#    uv pip install --no-build-isolation -e .
#
#    # Optional (for additional features):
#    cd ../pointgroup_ops
#    uv pip install --no-build-isolation -e .
#
# 6. Register DALES dataset with Pointcept (automatically done by setup script):
#    cd ../pointcept/pointcept/datasets
#    ln -s /full/path/to/PTv3/PointTransformerV3/Pointcept/pointcept/datasets/dales.py dales.py
#
#    # Add to __init__.py:
#    # from .dales import DALESDataset
#
# 7. Verify setup:
#    python -c "from pointcept.datasets import SemanticKITTIDataset, DALESDataset; print('✅ Success')"
#
# See docs/DAY1_COMPLETION_SUMMARY.md and docs/DAY2_COMPLETION_SUMMARY.md for details.
# ==============================================================================
